random letter generated and output of userKey

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>The Psychic Game</h1>
     </div>
     <div>
-        <p>Guess what letter I'm thinking of</p>
+        <p>Guess what letter I'm thinking of!</p>
     </div>
     <div>
         <p id="wins"></p>
